13299 File mtime changes twice, when file is modified using SMB server (Early side-port from OmniOSce)