usr/src/uts/common/fs/smbsrv/smb_node.c
@@ -20,7 +20,7 @@
  */
 /*
  * Copyright (c) 2007, 2010, Oracle and/or its affiliates. All rights reserved.
- * Copyright 2019 Nexenta Systems, Inc.  All rights reserved.
+ * Copyright 2020 Tintri by DDN, Inc. All rights reserved.
  */
 /*
  * SMB Node State Machine
@@ -1541,14 +1541,6 @@ smb_node_setattr(smb_request_t *sr, smb_node_t *node,
 	default:
 		break;
 	}
-
-	/*
-	 * If we have an open file, and we set the size,
-	 * then set the "written" flag so that at close,
-	 * we can force an mtime update.
-	 */
-	if (of != NULL && (attr->sa_mask & SMB_AT_SIZE) != 0)
-		of->f_written = B_TRUE;
 
 	/*
 	 * When operating on an open file, some settable attributes
